--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,30 +1,92 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context="org.pondar.pacmankotlin.MainActivity" >
+    android:orientation="vertical"
+    tools:context="org.pondar.pacmankotlin.MainActivity">
 
-    <Button
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/move_right"
-        android:id="@+id/moveRight"/>
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/pointsView"
-        android:textSize="24sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/points" />
+        <Button
+            android:id="@+id/pauseButton"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#6A0000"
+            android:text="@string/pause" />
+
+    </LinearLayout>
 
     <!-- Notice how the custom view is referenced here with
     a full package path-->
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/pointsView"
+            android:layout_width="114dp"
+            android:layout_height="wrap_content"
+            android:text="@string/points"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/timerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/timer" />
+    </LinearLayout>
+
     <org.pondar.pacmankotlin.GameView
         android:id="@+id/gameView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="627dp">
 
     </org.pondar.pacmankotlin.GameView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="38dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/moveLeft"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="128dp"
+            android:layout_height="match_parent"
+            android:backgroundTint="#B8A43F"
+            android:text="@string/move_left" />
+
+        <Button
+            android:id="@+id/moveUp"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#B8A43F"
+            android:text="@string/move_up" />
+
+        <Button
+            android:id="@+id/moveDown"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:backgroundTint="#B8A43F"
+            android:text="@string/move_down" />
+
+        <Button
+            android:id="@+id/moveRight"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="109dp"
+            android:layout_height="match_parent"
+            android:backgroundTint="#B8A43F"
+            android:text="@string/move_right" />
+
+    </LinearLayout>
 
 </LinearLayout>
